[package]
name = "zedmd-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "zedmd_rs"
path = "src/lib.rs"

[[example]]
name = "pixel_scan"
path = "examples/pixel_scan.rs"

[[example]]
name = "settings"
path = "examples/settings.rs"

[[example]]
name = "display_test"
path = "examples/display_test.rs"

[[example]]
name = "plasma"
path = "examples/plasma.rs"

[[example]]
name = "rings"
path = "examples/rings.rs"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
miniz_oxide = "0.9.0"
serialport = "4.8.1"


