[package]
name = "zedmd"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A Rust library for interfacing with the ZedMD display controller."
repository = "https://github.com/francisdb/zedmd-rs"

[lib]
name = "zedmd"
path = "src/lib.rs"

[[example]]
name = "pixel_scan"
path = "examples/pixel_scan.rs"

[[example]]
name = "settings"
path = "examples/settings.rs"

[[example]]
name = "display_test"
path = "examples/display_test.rs"

[[example]]
name = "plasma"
path = "examples/plasma.rs"

[[example]]
name = "plasma_rgb888"
path = "examples/plasma_rgb888.rs"

[[example]]
name = "rings"
path = "examples/rings.rs"

[[example]]
name = "rainbow"
path = "examples/rainbow.rs"

[[example]]
name = "scaling"
path = "examples/scaling.rs"

[dependencies]
env_logger = "0.11.10"
log = "0.4.29"
miniz_oxide = "0.9.1"
serialport = "4.9.0"
